high-contrast.less: Fix search-suggestions input border

--- a/public/css/themes/high-contrast.less
+++ b/public/css/themes/high-contrast.less
@@ -189,8 +189,7 @@
   }
 }
 
-.icinga-controls,
-.search-editor {
+.icinga-controls {
   input:not([type="checkbox"]):not([type="radio"]),
   .toggle-switch .toggle-slider:before,
   .toggle-switch > .toggle-slider,
@@ -203,6 +202,16 @@
     height: 1.166666667em;
     width: 1.166666667em;
     margin: 1px;
+  }
+}
+
+.search-suggestions {
+  input:not([type="checkbox"]):not([type="radio"]),
+  .toggle-switch .toggle-slider:before,
+  .toggle-switch > .toggle-slider,
+  select,
+  textarea {
+    border: none;
   }
 }
 
